--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.0.20
+  universal_html: ^2.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,8 @@ flutter:
   assets:
     - lib/assets/images/
     - lib/assets/images/portfolio/
+    - lib/assets/images/experience/
+    - lib/assets/files/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
