--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "thaanu_portfolio",
-    "short_name": "thaanu_portfolio",
+    "name": "Thaanu Perera - UI UX Designer",
+    "short_name": "Thaanu Perera",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#023e8a",
+    "theme_color": "#023e8a",
+    "description": "Thaanu Perera - Personal Portfolio",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
