--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.0.20
   universal_html: ^2.0.8
+  font_awesome_flutter: ^10.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
